examples/test/testpolicy3101.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3101
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key28: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value14
      podSelector:
        matchLabels:
          key24: value1
          key10: value29
          key32: value11
